# skyblivion-niflib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: niflib.dox
include/: BSComplexShape.h  ComplexShape.h  ComplexShapesTypes.h  FixLink.h  Inertia.h  Key.h  MatTexCollection.h  NIF_IO.h  Ref.h  RefObject.h  RefObject.h.bak  field_visitor.h  half.h  kfm.h  nif_basic_types.h  nif_basic_visitor.h  nif_math.h  nif_members_expr.h  niflib.h  nifqhull.h  objDecl.cpp  objTmpl.cpp  pch.h
include/custom_types/: BSVertexData.h  bsvertexdesc.h
include/game_specific/: oblivion.h  skyrim.h
include/interfaces/: interpolators.h  misc.h  typed_visitor.h
src/: BSComplexShape.cpp  ComplexShape.cpp  Inertia.cpp  MatTexCollection.cpp  NIF_IO.cpp  RefObject.cpp  Type.cpp  accessor.cpp  nif_basic_types.cpp  nif_math.cpp  nif_members_expr.cpp  niflib.cpp  nifqhull.cpp  visitor.cpp
src/custom_types/: BSVertexData.cpp  BSVertexDesc.cpp
src/interfaces/: interpolators.cpp  misc.cpp
test/: CMakeLists.txt  conversion_test.cpp  geometry.cpp  geometry.h  normal_test.cpp  read_write_test.cpp  sample_test.cpp  test_utils.cpp  test_utils.h
test/mikktspace/: generate.cpp
